Finished page mobile layout

--- a/tickevents-placeholder/src/app/new-home/header/header.component.css
+++ b/tickevents-placeholder/src/app/new-home/header/header.component.css
@@ -21,5 +21,5 @@ nav {
 .active {
     color: white !important;
     border-radius: 36px;
-    background: linear-gradient(90deg, #ea00fb, #211fff)
+    background: linear-gradient(90deg, #9A00FF, #FF004E)
 }
