--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -242,9 +242,49 @@
 			</p>
 		</div>
 		<div class="col-12">
-
+			<img class="w-100" src="../../assets/new-start-me-mobile.png" alt="Foto Robin La Rondelle">
+		</div>
+		<div class="col-12">
+			<h1 class="success-name text-center ft-alata m-0">Robin La Rondelle</h1>
+			<p class="success-subtitle text-center purple m-0">Oprichter van Tickevents</p>
 		</div>
 	</div>
 	<!-- End Success Section -->
+
+	<!-- Review section -->
+	<div class="row no-gutters mt-4 review-section w px-3 mt-4">
+		<div class="col-12">
+			<p class="review">"Tickevents heeft mij een hoop zorgen en kosten bespaard! De oprichter kwam persoonlijk
+				langs om een bakje koffie te drinken en de plannen van m'n workshop bespreken, om te kijken hoe we goed
+				samen kunnen werken. Op de dag van het evenement kwam hij zelfs meehelpen met scannen en ondersteunde
+				hij waar nodig met de ticketverkoop."</p>
+			<h4 class="reviewer-name ft-alata">Marlijn de Jager</h4>
+			<h5 class="reviewer-function ft-alata">Organiseert kleine feesten in kroegen</h5>
+		</div>
+		<div class="col-12 text-center mt-3">
+			<img src="../../assets/new-start-interviewer.svg" class="w-80">
+		</div>
+	</div>
+	<!-- End review section -->
+
+	<!-- Final section -->
+	<div class="row no-gutters mt-5 final-section px-3">
+		<div class="col-12">
+			<h2 class="section-title text-center">Klaar om van jouw evenement een succes te maken? <span class="purple">Meld dan nu
+					je evenement aan</span></h2>
+		</div>
+		<div class="col-12 mt-3">
+			<button routerLink="/getstarted" class="button btn-cta w-100 text-center ft-alata">Aan de
+				slag</button>
+		</div>
+		<div class="col-12 mt-5">
+			<img src="../../assets/new-start-selfiestick.svg" alt="Selfie" class="w-100">
+		</div>
+	</div>
+	<!-- End final section -->
+
+	<!-- Footer -->
+	<app-new-home-footer></app-new-home-footer>
+	<!-- End footer -->
 
 </div>
