--- a/tickevents-placeholder/src/custom.css
+++ b/tickevents-placeholder/src/custom.css
@@ -7,7 +7,7 @@
 
 /* @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"; */
 /* @import 'https://fonts.googleapis.com/css2?family=Open+Sans&family=Rowdies&display=swap'; */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
 /*
