optimized for tablet sizes

--- a/tickevents-placeholder/src/app/new-home/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/new-home/footer/footer.component.html
@@ -2,17 +2,18 @@
     <div class="col-12 mt-5">
         <h4 class="ft-alata">Op de hoogte blijven? Laat je e-mail achter</h4>
     </div>
-    <div class="col-12 mt-3">
+    <div class="col-12 col-md-8 mt-3 pr-md-2">
         <input type="email" class="w-100 input px-3 ft-alata" placeholder="e-mail">
     </div>
-    <div class="col-auto mt-3">
-        <button class="btn-secondary-cta ft-alata px-5">Verzend</button>
+    <div class="col-12 col-md-4 mt-3 pl-md-2">
+        <button class="d-inline-block d-md-none btn-secondary-cta ft-alata px-5">Verzend</button>
+        <button class="d-none d-md-inline-block w-100 btn-secondary-cta ft-alata px-5">Verzend</button>
     </div>
     <div class="col-12 mt-5">
         <img src="../../../assets/Logo White.svg" height="40px">
     </div>
     <div class="col-12">
-        <p class="gray small">info@tickevents.nl<br>
+        <p class="gray">info@tickevents.nl<br>
             KvK: 78568706<br>
             BTW-ID: NL03348034B41<br>
             ©Rondelle Software Solutions</p>
