--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -9,7 +9,51 @@
 
 		<!-- SVG Background -->
 		<div class="col-12 p-absolute top-left overflow-hidden">
-			<svg id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
+			<svg class="d-none d-md-inline"version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+				x="0px" y="0px" width="100%" height="1204.43px" preserveAspectRatio="none" viewBox="0 0 769.21 1204.43"
+				enable-background="new 0 0 769.21 1204.43" xml:space="preserve">
+				<linearGradient id="Path_1780_1_" gradientUnits="userSpaceOnUse" x1="-32.5021" y1="1107.8977"
+					x2="-31.5201" y2="1107.1558"
+					gradientTransform="matrix(769.2061 0 0 -1204.4331 25027.8125 1334332.875)">
+					<stop offset="0" style="stop-color:#EA00FB" />
+					<stop offset="1" style="stop-color:#211FFF" />
+				</linearGradient>
+				<path id="Path_1780" fill="url(#Path_1780_1_)" d="M0,0v734.47c0,0,128.53,2.16,192.06,114.35s254.11,94.61,254.11,94.61
+				s109.48-10.81,177.06,129.76s145.98,131.11,145.98,131.11V0H0z" />
+				<linearGradient id="Rectangle_2_1_" gradientUnits="userSpaceOnUse" x1="-30.9275" y1="1111.7688"
+					x2="-31.9095" y2="1110.7869"
+					gradientTransform="matrix(45.9619 -45.9619 -45.9619 -45.9619 53230.2344 50723.7266)">
+					<stop offset="0" style="stop-color:#A607FF" />
+					<stop offset="1" style="stop-color:#5400FF" />
+				</linearGradient>
+				<polygon id="Rectangle_2" fill="url(#Rectangle_2_1_)"
+					points="663.73,1092.12 709.69,1046.16 755.66,1092.12 709.69,1138.09 " />
+				<linearGradient id="Ellipse_1_1_" gradientUnits="userSpaceOnUse" x1="-34.2806" y1="1110.6627"
+					x2="-34.2806" y2="1109.6627" gradientTransform="matrix(69 0 0 -69 2960.8594 77517.7266)">
+					<stop offset="0" style="stop-color:#A206FF" />
+					<stop offset="1" style="stop-color:#4F18FE" />
+				</linearGradient>
+				<circle id="Ellipse_1" fill="url(#Ellipse_1_1_)" cx="595.5" cy="916.5" r="34.5" />
+				<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="-31.8967" y1="1107.7637" x2="-32.3367"
+					y2="1106.8107"
+					gradientTransform="matrix(714.2894 218.3802 187.6862 -613.894 -184330.8594 687242.3125)">
+					<stop offset="0" style="stop-color:#FFD711;stop-opacity:0" />
+					<stop offset="0.499" style="stop-color:#FF4E03;stop-opacity:0.502" />
+					<stop offset="1" style="stop-color:#FFD711;stop-opacity:0" />
+				</linearGradient>
+				<path fill="url(#SVGID_1_)"
+					d="M522.39,89.61c-86.89,53.55-46.98,208.61-117.13,312.38s-286.97,31.82-243.78,111.83
+				C204.66,593.83,455.51,719.09,578,722.03c52.47,1.26,125.19-19.12,191.2-52.35V178.47C677.01,91.34,602.86,40.02,522.39,89.61z" />
+				<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="-31.3965" y1="1110.0343" x2="-32.3785"
+					y2="1109.0524"
+					gradientTransform="matrix(90.5097 -90.5097 -90.5097 -90.5097 104039.4922 98490.2188)">
+					<stop offset="0" style="stop-color:#A607FF" />
+					<stop offset="1" style="stop-color:#5400FF" />
+				</linearGradient>
+				<polygon fill="url(#SVGID_2_)" points="769.21,1034.06 769.21,873.11 688.73,953.58 " />
+			</svg>
+			
+			<svg class="d-inline d-md-none" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
 				xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="920" preserveAspectRatio="none"
 				viewBox="0 0 375.75 920">
 				<defs>
@@ -40,29 +84,29 @@
 		<!-- End SVG background -->
 
 		<!-- Title content -->
-		<div class="px-3 header-padding w no-gutters">
+		<div class="row px-3 header-padding title-section w no-gutters">
 			<div class="col-12 title-col">
-				<h1 class="ft-alata text-center title m-0">
+				<h1 class="ft-alata text-center text-md-left title m-0">
 					€ 1,- per ticket. <br>
 					Altijd. Overal
 				</h1>
 			</div>
-			<div class="col-12 section">
-				<p class="m-0">Hou meer geld over aan de kaartverkoop van je evenement met de scherpe servicekosten van
+			<div class="col-12">
+				<p class="m-0 section-text">Hou meer geld over aan de kaartverkoop van je evenement met de scherpe servicekosten van
 					Tickevents. Zo kan je meer, vaker en grotere evenementen organiseren.</p>
 			</div>
-			<div class="col-12 section">
-				<button routerLink="/getstarted" class="button btn-cta w-100 text-center ft-alata">Aan de
+			<div class="col-12 col-md-6 mt-4 pr-md-2">
+				<button routerLink="/getstarted" class="button btn-cta w-100 text-center">Aan de
 					slag</button>
 			</div>
-			<div class="col-12 button-section">
+			<div class="col-12 col-md-6 button-section mt-4 pl-md-2">
 				<button routerLink="/pricing"
-					class="button btn-seondairy-cta w-100 text-center ft-alata">Prijzen</button>
+					class="button btn-seondairy-cta w-100 text-center">Prijzen</button>
 			</div>
-			<div class="col-12 section">
-				<div class="row no-gutters justify-content-center">
+			<div class="col-12 mt-0 mt-md-5 section">
+				<div class="row no-gutters justify-content-center justify-content-md-end">
 					<div class="col-auto">
-						<img src="../../assets/jumping_people.svg" width="100%">
+						<img src="../../assets/new-start-jumping-people.svg" class="jumping-people">
 					</div>
 				</div>
 			</div>
@@ -73,27 +117,29 @@
 	<!-- Title section -->
 
 	<!-- Wij zijn Tickevents section -->
-	<div class="wij-zijn-section row no-gutters px-3 align-content-center">
-		<div class="col-12 ft-alata">
+	<div class="section wij-zijn-section row no-gutters px-3 align-content-center">
+		<div class="col-12">
 			<h1 class="section-header">Wij zijn</h1>
 			<h1 class="section-header purple">Tickevents</h1>
-			<p class="ft-montserrat">Een online ticketingplatform waarmee we jouw evenement tot het volgende niveau
+		</div>
+		<div class="col-12 col-md-11">
+			<p class="section-text">Een online ticketingplatform waarmee we jouw evenement tot het volgende niveau
 				tillendoor bizar scherpe
 				servicekosten te combineren met een waanzinnige klantervaring.</p>
 		</div>
-	</div>
+	</div> 
 	<!-- End Wij zijn Tickevents section -->
 
 
 	<!-- Jumping man section -->
-	<div class="jumping-man-section row no-gutters mt-5">
+	<div class="section jumping-man-section row no-gutters mt-5">
 		<div class="col-12 overflow-hidden">
-			<img src="../../assets/new-start-jumping-man-mobile-01.svg" class="w-100 box-shadow">
+			<img src="../../assets/new-start-jumping-man.svg" class="jumping-man">
 		</div>
-		<div class="col-12 ft-alata px-3 mt-5">
-			<h1 class="section-header m-0">Minder servicekosten</h1>
-			<h1 class="section-header m-0 purple mt-4px">Meer winst</h1>
-			<p class="ft-montserrat mt-4px">Met onze scherpe servicekosten haal jij meer winst uit jouw kaartverkoop.
+		<div class="col-12 px-3 mt-5">
+			<h1 class="section-header">Minder servicekosten</h1>
+			<h1 class="section-header purple mt-4px">Meer winst</h1>
+			<p class="section-text">Met onze scherpe servicekosten haal jij meer winst uit jouw kaartverkoop.
 				Wij vragen maar € 1,- servicekosten per verkocht ticket, zodat jij meer geld over hebt voor dat waar jij
 				van houdt: meer evenementen organiseren.</p>
 		</div>
@@ -102,8 +148,8 @@
 
 
 	<!-- Cards section -->
-	<div class="row w no-gutters px-3 cards-section justify-content-center mt-5">
-		<div class="col-6 card-wrapper order-1 ">
+	<div class="section cards-section row w no-gutters px-3  justify-content-center mt-5">
+		<div class="col-6 col-md-4 card-wrapper order-1 ">
 			<div class="card p-relative box-shadow">
 				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
@@ -144,7 +190,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-6 card-wrapper order-2">
+		<div class="col-6 col-md-4 card-wrapper order-2">
 			<div class="card p-relative box-shadow">
 				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
@@ -185,7 +231,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-6 card-wrapper mt-5 order-3">
+		<div class="col-6 col-md-4 card-wrapper mt-5 mt-md-0 order-3">
 			<div class="card p-relative box-shadow">
 				<svg class="p-absolute" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" preserveAspectRatio="none"
@@ -230,30 +276,31 @@
 	<!-- End cars section -->
 
 	<!-- Success section -->
-	<div class="row no-gutters mt-4 px-3 success-section">
-		<div class="col-12">
-			<h1 class="section-title ft-alata">
+	<div class="section success-section row no-gutters mt-5 px-3 ">
+		<div class="col-12 col-md-11">
+			<h1 class="section-header">
 				"Tickevents gaat 100% voor <span class="purple">jouw succes</span>"
 			</h1>
-			<p class="mt-3">
+			<p class="section-text">
 				Tickevents is opgericht om meer te bieden dan alleen goedkope tickets. Wij willen jouw evenement tot een
 				onvergetelijk succes maken. Wij willen onze kennis en krachten met jou bundelen, om je zo de
 				mogelijkheden te geven jouw bezoekers het evenement van hun leven te geven.
 			</p>
 		</div>
-		<div class="col-12">
-			<img class="w-100" src="../../assets/new-start-me-mobile.png" alt="Foto Robin La Rondelle">
+		<div class="col-12 mt-md-5">
+			<img class="w-100 d-inline d-md-none" src="../../assets/new-start-me-mobile.png" alt="Foto Robin La Rondelle">
+			<img class="w-100 d-none d-md-inline" src="../../assets/new-start-me-tablet.png" alt="Foto Robin La Rondelle">
 		</div>
-		<div class="col-12">
-			<h1 class="success-name text-center ft-alata m-0">Robin La Rondelle</h1>
-			<p class="success-subtitle text-center purple m-0">Oprichter van Tickevents</p>
+		<div class="col-12 credentials-section">
+			<h1 class="success-name text-center text-md-right ft-alata m-0">Robin La Rondelle</h1>
+			<p class="success-subtitle text-center text-md-right purple m-0">Oprichter van Tickevents</p>
 		</div>
 	</div>
 	<!-- End Success Section -->
 
 	<!-- Review section -->
-	<div class="row no-gutters mt-4 review-section w px-3 mt-4">
-		<div class="col-12">
+	<div class="row no-gutters mt-5 section review-section w px-3">
+		<div class="col-12 col-md-6 order-md-2 align-self-md-center">
 			<p class="review">"Tickevents heeft mij een hoop zorgen en kosten bespaard! De oprichter kwam persoonlijk
 				langs om een bakje koffie te drinken en de plannen van m'n workshop bespreken, om te kijken hoe we goed
 				samen kunnen werken. Op de dag van het evenement kwam hij zelfs meehelpen met scannen en ondersteunde
@@ -261,7 +308,7 @@
 			<h4 class="reviewer-name ft-alata">Marlijn de Jager</h4>
 			<h5 class="reviewer-function ft-alata">Organiseert kleine feesten in kroegen</h5>
 		</div>
-		<div class="col-12 text-center mt-3">
+		<div class="col-12 col-md-6 order-md-1 text-center my-3 my-md-0">
 			<img src="../../assets/new-start-interviewer.svg" class="w-80">
 		</div>
 	</div>
@@ -270,10 +317,11 @@
 	<!-- Final section -->
 	<div class="row no-gutters mt-5 final-section px-3">
 		<div class="col-12">
-			<h2 class="section-title text-center">Klaar om van jouw evenement een succes te maken? <span class="purple">Meld dan nu
+			<h2 class="section-header text-center text-md-left">Klaar om van jouw evenement een succes te maken? <span
+					class="purple">Meld dan nu
 					je evenement aan</span></h2>
 		</div>
-		<div class="col-12 mt-3">
+		<div class="col-12 col-md-6 mt-3">
 			<button routerLink="/getstarted" class="button btn-cta w-100 text-center ft-alata">Aan de
 				slag</button>
 		</div>
