Finished new home page

--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
@@ -35,7 +35,7 @@
                         <div class="row no-gutters align-content-center justify-content-center section-container">
 
                             <!-- Gray section background -->
-                            <div class="col-12 section-row rellax" data-rellax-percentage="0.5">
+                            <div class="col-12 section-row ">
                                 <div class="row no-gutters justify-content-start">
                                     <div class="col-6 bg-gray section-background">
                                     </div>
@@ -67,9 +67,8 @@
                             <!-- End text section -->
 
                             <!-- SVG Section -->
-                            <div class="col-12 col-md-7 rellax svg-col" data-rellax-percentage="0.5"
-                                data-rellax-xs-speed="2" data-rellax-mobile-speed="3" data-rellax-tablet-speed="3 "
-                                data-rellax-desktop-speed="-2">
+                            <div class="col-12 col-md-7  svg-col"
+                                >
                                 <div
                                     class="row no-gutters h-100 align-content-center justify-content-center justify-content-md-end">
                                     <div class="col-auto">
@@ -146,7 +145,7 @@
                         <div class="row no-gutters section-container">
 
                             <!-- Gray section background -->
-                            <div class="col-12 section-row rellax" data-rellax-percentage="0.5">
+                            <div class="col-12 section-row">
                                 <div class="row no-gutters justify-content-end">
                                     <div class="col-6 bg-gray section-background">
                                     </div>
@@ -177,9 +176,8 @@
                             <!-- End text section -->
 
                             <!-- SVG Section -->
-                            <div class="col-12 col-md-7 order-md-1 rellax" data-rellax-percentage="0.5"
-                                data-rellax-xs-speed="2" data-rellax-mobile-speed="3" data-rellax-tablet-speed="3 "
-                                data-rellax-desktop-speed="-2">
+                            <div class="col-12 col-md-7 order-md-1 "
+                                >
                                 <div
                                     class="row no-gutters h-100 justify-content-center align-content-center justify-content-md-start">
                                     <div class="col-auto">
@@ -281,7 +279,7 @@
                         <div class="row no-gutters section-container">
 
                             <!-- Gray section background -->
-                            <div class="col-12 section-row rellax" data-rellax-percentage="0.5">
+                            <div class="col-12 section-row ">
                                 <div class="row no-gutters justify-content-start">
                                     <div class="col-6 bg-gray section-background">
                                     </div>
@@ -309,9 +307,7 @@
                                 <!-- End text section -->
                             </div>
                             <!-- SVG Section -->
-                            <div class="col-12 col-md-7 rellax" data-rellax-percentage="0.5" data-rellax-xs-speed="2"
-                                data-rellax-mobile-speed="3" data-rellax-tablet-speed="3 "
-                                data-rellax-desktop-speed="-2">
+                            <div class="col-12 col-md-7 " >
                                 <div
                                     class="row no-gutters h-100 align-content-center justify-content-center justify-content-md-end">
                                     <div class="col-auto">
@@ -362,7 +358,7 @@
                         <div class="row no-gutters section-container">
 
                             <!-- Gray section background -->
-                            <div class="col-12 section-row rellax" data-rellax-percentage="0.5">
+                            <div class="col-12 section-row ">
                                 <div class="row no-gutters justify-content-end">
                                     <div class="col-6 bg-gray section-background">
                                     </div>
@@ -392,9 +388,8 @@
                             <!-- End text section -->
 
                             <!-- SVG Section -->
-                            <div class="col-12 col-md-7 order-md-1 rellax" data-rellax-percentage="0.5"
-                                data-rellax-xs-speed="2" data-rellax-mobile-speed="3" data-rellax-tablet-speed="3 "
-                                data-rellax-desktop-speed="-2">
+                            <div class="col-12 col-md-7 order-md-1 "
+                                >
                                 <div
                                     class="row no-gutters h-100 align-content-center justify-content-center justify-content-md-start">
                                     <div class="col-auto">
