--- a/tickevents-placeholder/src/app/new-home/footer/footer.component.css
+++ b/tickevents-placeholder/src/app/new-home/footer/footer.component.css
@@ -16,3 +16,35 @@ input {
     border: none;
     background: linear-gradient(90deg, #9A00FF, #FF004E)
 }
+
+.footer-logo {
+    height: 40px;
+}
+
+.section-header {
+    font-size: 1.8em;
+}
+
+
+@media (min-width: 1200px) {
+    .footer-section {
+        background-image: url(../../../assets/new-start-footer-background-desktop.svg);
+        background-size: 130% 100%;
+        background-position: center;
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
+        margin-top: 100px !important;
+    }
+
+    .footer-text {
+        line-height: 2em;
+    }
+
+    .footer-logo {
+        height: 60px;
+    }
+    
+    .section-header {
+        font-size: 2em;
+    }
+}
