--- a/tickevents-placeholder/src/app/new-home/header/header.component.html
+++ b/tickevents-placeholder/src/app/new-home/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-none px-3 w p-absolute w-100">
+<nav class="navbar navbar-expand-lg bg-none px-3 w p-absolute w-100 justify-content-between">
 
     <!-- Navbar Logo -->
     <a routerLink="/new-home">
@@ -34,12 +34,13 @@
     </button>
     <!-- End Navbar button -->
 
-    <div class="collapse navbar-collapse ft-alata text-center mt-2 mt-lg-0" id="nav">
-        <ul class="navbar-nav">
-            <li class="nav-item py-2 py-lg-0 active" routerLink="/new-home" routerLinkActive="active">Home</li>
-            <li class="nav-item py-2 py-lg-0" routerLink="/about" routerLinkActive="active">Over ons</li>
-            <li class="nav-item py-2 py-lg-0" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
-            <li class="nav-item py-2 py-lg-0" routerLink="/getstarted" routerLinkActive="active">Aan de slag</li>
+    <div class="collapse navbar-collapse ft-alata mt-2 mt-lg-0 " id="nav">
+        <ul class="navbar-nav  text-center ml-xl-auto">
+            <li class="nav-item py-2 py-lg-1 px-lg-3 active" routerLink="/new-home" routerLinkActive="active">Home</li>
+            <!-- <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/about" routerLinkActive="active">Over ons</li> -->
+            <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-5 btn-cta" routerLink="/getstarted" routerLinkActive="active">Aan de slag</li>
         </ul>
     </div>
 </nav>
