--- a/tickevents-placeholder/src/app/new-home/header/header.component.css
+++ b/tickevents-placeholder/src/app/new-home/header/header.component.css
@@ -26,16 +26,11 @@ nav {
 }
 
 .active {
-    border-radius: 36px;
-    color: white !important;
-    background: linear-gradient(90deg, #9A00FF, #FF004E);
+    text-decoration: underline solid;
+    background: none;
 }
 
 @media (min-width: 992px) {
-    .active {
-        text-decoration: underline white solid;
-        background: none;
-    }
     nav {
         font-size: 1.4em !important;
     }
