--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -237,7 +237,7 @@
 	<div class="section cards-section row w no-gutters px-3 px-xl-0 justify-content-center mt-5  overflow-hidden">
 		<div class="col">
 			<div class="container">
-				<div class="row no-gutters p-relative">
+				<div class="row no-gutters p-relative  justify-content-center">
 					<div class="col-12 p-absolute">
 						<img src="../../assets/new-start-cards-background-desktop.svg" class="cards-background d-none d-xl-inline">
 					</div>
@@ -245,32 +245,7 @@
 					<div class="col-6 col-md-4 card-wrapper order-1">
 						
 						<div class="card box-shadow p-relative">
-							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background d-none d-xl-inline">
-							
-							<svg class="p-absolute d-inline d-xl-none" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
-								preserveAspectRatio="none" viewBox="0 0 165 250">
-								<defs>
-									<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42"
-										y2="539.96" gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
-										gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#5b36f8" />
-										<stop offset="1" stop-color="#2e1b7c" />
-									</linearGradient>
-									<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51"
-										y2="41.44" gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#221559" />
-										<stop offset="1" stop-color="#442ab1" />
-									</linearGradient>
-								</defs>
-								<title>new-start-card-background</title>
-								<path id="Path_1664-2" data-name="Path 1664-2"
-									d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
-									style="fill:url(#Naamloos_verloop_3)" />
-								<path
-									d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
-									style="fill:url(#Naamloos_verloop_11)" />
-							</svg>
+							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background">
 
 							<div class="row d-none d-xl-flex">
 								<div class="col-12">
@@ -298,32 +273,7 @@
 					</div>
 					<div class="col-6 col-md-4 card-wrapper order-2">
 						<div class="card p-relative box-shadow ">
-							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background d-none d-xl-inline">
-							
-							<svg class="p-absolute d-inline d-xl-none" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
-								preserveAspectRatio="none" viewBox="0 0 165 250">
-								<defs>
-									<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42"
-										y2="539.96" gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
-										gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#5b36f8" />
-										<stop offset="1" stop-color="#2e1b7c" />
-									</linearGradient>
-									<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51"
-										y2="41.44" gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#221559" />
-										<stop offset="1" stop-color="#442ab1" />
-									</linearGradient>
-								</defs>
-								<title>new-start-card-background</title>
-								<path id="Path_1664-2" data-name="Path 1664-2"
-									d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
-									style="fill:url(#Naamloos_verloop_3)" />
-								<path
-									d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
-									style="fill:url(#Naamloos_verloop_11)" />
-							</svg>
+							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background">
 
 							<div class="row d-none d-xl-flex">
 								<div class="col-12">
@@ -351,32 +301,7 @@
 					</div>
 					<div class="col-6 col-md-4 card-wrapper mt-5 mt-md-0 order-3">
 						<div class="card p-relative box-shadow">
-							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background d-none d-xl-inline">
-							
-							<svg class="p-absolute d-inline d-xl-none" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
-								preserveAspectRatio="none" viewBox="0 0 165 250">
-								<defs>
-									<linearGradient id="Naamloos_verloop_3" x1="-388.42" y1="540.97" x2="-388.42"
-										y2="539.96" gradientTransform="matrix(162.73, 0, 0, -248, 63287.76, 134160.99)"
-										gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#5b36f8" />
-										<stop offset="1" stop-color="#2e1b7c" />
-									</linearGradient>
-									<linearGradient id="Naamloos_verloop_11" x1="86.51" y1="249.99" x2="86.51"
-										y2="41.44" gradientUnits="userSpaceOnUse">
-										<stop offset="0" stop-color="#221559" />
-										<stop offset="1" stop-color="#442ab1" />
-									</linearGradient>
-								</defs>
-								<title>new-start-card-background</title>
-								<path id="Path_1664-2" data-name="Path 1664-2"
-									d="M12.44,0H152.56A12.53,12.53,0,0,1,165,12.6V237.4A12.53,12.53,0,0,1,152.56,250H12.44A12.53,12.53,0,0,1,0,237.4V12.6A12.53,12.53,0,0,1,12.44,0Z"
-									style="fill:url(#Naamloos_verloop_3)" />
-								<path
-									d="M121,148.57C90.92,194,51.08,228.17,8,249.16a12.67,12.67,0,0,0,4.38.83H152.56A12.5,12.5,0,0,0,165,237.43v-196C158.2,77.74,143.63,114.4,121,148.57Z"
-									style="fill:url(#Naamloos_verloop_11)" />
-							</svg>
+							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background">
 
 							<div class="row d-none d-xl-flex">
 								<div class="col-12">
@@ -458,7 +383,7 @@
 						<h4 class="reviewer-name ft-alata mt-xl-4">Marlijn de Jager</h4>
 						<h5 class="reviewer-function ft-alata">Organiseert kleine feesten in kroegen</h5>
 					</div>
-					<div class="col-12 col-md-6 order-md-1 text-center my-3 my-md-0">
+					<div class="col-12 col-md-6 order-md-1 text-center align-self-md-center my-3 my-md-0">
 						<img src="../../assets/new-start-interviewer.svg" class="w-80">
 					</div>
 				</div>
