--- a/tickevents-placeholder/src/app/pricing/pricing.component.css
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.css
@@ -7,7 +7,7 @@
 
 /* First section */
 .bg-pricing {
-    background-image: url(../../assets/bd-1.svg);
+    background-image: url(../../assets/bg-concert.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
